--- a/src/tpl/content/FileManagerContentView.ejs
+++ b/src/tpl/content/FileManagerContentView.ejs
@@ -6,4 +6,4 @@
     <span class="fm-panel-btn fm-panel-btn-right"><a class="view-th icon-menu"></a></span>
     <span class="fm-panel-btn fm-panel-btn-right"><a class="view-menu icon-th"></a></span>
 </div>
-<div data-content=""></div>
+<div data-region="content"></div>
