--- a/src/tpl/content/FileManagerUserListView.ejs
+++ b/src/tpl/content/FileManagerUserListView.ejs
@@ -12,7 +12,7 @@
         </div>
     </div>
     {{ } }}
-    <div class="fm-user-files ">
+    <div data-region="tbody" class="fm-user-files ">
 
     </div>
 </div>
@@ -40,7 +40,7 @@
         {{ } }}
         </thead>
 
-        <tbody class="fm-user-files">
+        <tbody data-region="tbody" class="fm-user-files">
 
         </tbody>
 
