--- a/src/tpl/header/FileManagerHeaderView.ejs
+++ b/src/tpl/header/FileManagerHeaderView.ejs
@@ -1,6 +1,6 @@
 <div class="fm-header">
     <div class="fm-header-title">FileManager</div>
     {{ if(close===true){ }}
-    <div class="fm-header-cancel icon-cancel"></div>
+    <div data-bind="close" class="fm-header-cancel icon-cancel"></div>
     {{ } }}
 </div>
