--- a/src/tpl/layout/FileManagerLayoutModalView.ejs
+++ b/src/tpl/layout/FileManagerLayoutModalView.ejs
@@ -1,6 +1,6 @@
 <div class="fm-modal-in"></div>
 <div class="fm-modal-contents">
-    <div class="FileManagerLayout-header-modal"></div>
-    <div class="FileManagerLayout-content-modal"></div>
-    <div class="FileManagerLayout-footer-modal"></div>
+    <div data-region="header" class="FileManagerLayout-header-modal"></div>
+    <div data-region="content" class="FileManagerLayout-content-modal"></div>
+    <div data-region="footer" class="FileManagerLayout-footer-modal"></div>
 </div>
