--- a/src/tpl/layout/FileManagerLayoutView.ejs
+++ b/src/tpl/layout/FileManagerLayoutView.ejs
@@ -1,4 +1,4 @@
-<div class="FileManagerLayout-header"></div>
-<div class="FileManagerLayout-nav"></div>
-<div class="FileManagerLayout-content"></div>
-<div class="FileManagerLayout-footer"></div>
+<div data-region="header" class="FileManagerLayout-header"></div>
+<div data-region="nav" class="FileManagerLayout-nav"></div>
+<div data-region="content" class="FileManagerLayout-content"></div>
+<div data-region="footer" class="FileManagerLayout-footer"></div>
